# wukong1.01

./: .gitignore  CMakeLists.txt  CODE_ANALYSIS_REPORT.md  CODE_WIKI.md  DEVELOPMENT.md  FULL_CODE_REVIEW.md  IMPROVEMENTS.md  MANUAL_BUILD.md  README.md  READY_TO_PACKAGE.md  RULE_HELP_FEATURE.md  analyze_all_regions.py  build.bat  build.ps1  build_and_package.bat  build_only.bat  build_package.bat  calc_pandas.py  calculate_freight.py  package.ps1  package_portable.ps1  quick_package.ps1  simple_package.ps1  test_calculation_fix.py  test_e2e.py  test_excel.py  test_price_rules.py  test_progress.py  test_progress2.py  test_refactor.py  verify_inversion.py  verify_inversion_fix.py  一键打包.bat
.workbuddy/memory/: 2026-07-10.md
QXlsx/QXlsx/: CMakeLists.txt
QXlsx/QXlsx/header/: xlsxreadsax.h
QXlsx/QXlsx/source/: xlsxreadsax.cpp
installer/: setup.iss  setup.nsi
md/: BUILD_INSTRUCTIONS.md  COMPLETE_FIX_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  FIXES_SUMMARY.md  P0_P1_FIXES.md  PACKAGE_GUIDE.md  PRICE_INVERSION_FIX.md  RULE_HELP_SUMMARY.md  UI_LAYOUT_DIAGRAM.md
release/translations/: qt_ca.qm
resources/: app.rc  resources.qrc  style.qss
src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
src/Auth/: LicenseGenerator.cpp  LicenseGenerator.h  LicenseManager.cpp  LicenseManager.h  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui
src/Calculation/: FreightCalculator.cpp  FreightCalculator.h  RuleManager.cpp  RuleManager.h  SimdCalculator.cpp  SimdCalculator.h  ThreadPool.cpp  ThreadPool.h
src/DataModel/: CalculationHistory.h  CalculationRule.cpp  CalculationRule.h  Customer.cpp  Customer.h  CustomerStats.h  MappingTemplate.cpp  MappingTemplate.h  OrderData.cpp  OrderData.h  PriceTable.cpp  PriceTable.h
src/Excel/: ExcelEngine.cpp  ExcelEngine.h  ExcelExporter.cpp  ExcelExporter.h  ExcelImporter.cpp  ExcelImporter.h
src/UI/: BannerWidget.cpp  BannerWidget.h  ChartDialog.cpp  ChartDialog.h  ChartWidgets.cpp  ChartWidgets.h  CustomerDialog.cpp  CustomerDialog.h  GlobalRulesDialog.cpp  GlobalRulesDialog.h  HeaderMappingDialog.cpp  HeaderMappingDialog.h  HistoryDialog.cpp  HistoryDialog.h  PriceTableDialog.cpp  PriceTableDialog.h  ProgressWidget.cpp  ProgressWidget.h  QuickTestWidget.cpp  QuickTestWidget.h  RuleHelpDialog.cpp  RuleHelpDialog.h  RuleHelpDialog.ui  RuleManagerDialog.cpp  RuleManagerDialog.h  RuleManagerDialog.ui
src/Utils/: ConfigManager.cpp  ConfigManager.h  Logger.cpp  Logger.h  ProvinceUtils.cpp  ProvinceUtils.h  ThemeManager.cpp  ThemeManager.h
tools/LicenseGenerator/: CMakeLists.txt  main.cpp
